--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Orphan_Care_Room_With_objects_inside.fbx filter=lfs diff=lfs merge=lfs -text
