Added cat food and scooper models. Organized materials inside of the newest room models

--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ Orphan filter=lfs diff=lfs merge=lfs -text
 Care filter=lfs diff=lfs merge=lfs -text
 Room filter=lfs diff=lfs merge=lfs -text
 *.fbx filter=lfs diff=lfs merge=lfs -text
+Cat[[:space:]]Food[[:space:]]and[[:space:]]Scoop.blend filter=lfs diff=lfs merge=lfs -text
